syntax = "proto3";

package netflow;

import "github.com/bio-routing/bio-rd/net/api/net.proto";
option go_package = "github.com/bio-routing/tflow2/netflow";

service annotator {
  rpc Annotate (Flow) returns (Flow) {}
}

// Flow defines a network flow
message Flow {
  // Router flow was received from
  bio.net.IP router = 1;

  // Address family
  uint32 family = 2;

  // SRC IP address
  bio.net.IP src_addr = 3;

  // DST IP address
  bio.net.IP dst_addr = 4;

  // Protocol
  uint32 protocol = 5;

  // Number of packets
  uint32 packets = 6;

  // Size of flow
  uint64 size = 7;

  // SNMP interface id flow was received on
  uint32 int_in = 8;

  // SNMP interface id flow was transmitted on
  uint32 int_out = 9;

  // Next Hop IP address
  bio.net.IP next_hop = 10;

  // SRC ASN
  uint32 src_as = 11;

  // DST ASN
  uint32 dst_as = 12;

  // NEXT HOP ASN
  uint32 next_hop_as = 13;

  // Unix timestamp
  int64 timestamp = 14;

  // SRC prefix
  bio.net.Prefix src_pfx = 15;

  // DST perfix
  bio.net.Prefix dst_pfx = 16;

  // SRC port
  uint32 src_port = 17;

  //DST port
  uint32 dst_port = 18;

  //Samplerate
  uint64 samplerate = 19;
}

// Intf groups an interfaces ID and name
message Intf {
    // ID is an interface ID
    uint32 id = 1;

    // name is an interfaces name
    string name = 2;
}

// Flows defines a groups of flows
message Flows {
    // Group of flows
    repeated Flow flows = 1;
    
    // Mapping of interface names to IDs
    repeated Intf interface_mapping = 2;
}